========================
0.0.87
========================

- added `charset=utf-8` to the JSON content-type in the `REQUEST()` method
- added `default_tapi` config key
- updated Total.js API endpoint
- added a timeout for Total API endpoints

========================
0.0.86
========================

- fixed returning binary data in the `TotalAPI()` method
- fixed logging in the `FILESTORAGE().rename()` method
- improved parsing of multiple URL query argument keys (joined into the string separated by a comma)
- fixed handling arguments in the `RESTBuilder.API()` method
- fixed `$.url` in the `AUTH()` method

========================
0.0.85
========================

- fixed reconnecting to the server in `OPENCLIENT()`
- added a new version of `UID()` generator (`f` version)
- added `U.convert62(number)` it converts number to a 62 custom radix
- added `U.from62(number)` it converts a 62 custom radix to a number
- fixed loading of FlowStream schema (critical)
- fixed a bad place for callback evaluation in the FlowStream (critical)
- updated `CONF.default_uid {String}` option for changing of UID generator (possible values `f` (new), `r` (new))

========================
0.0.84
========================

- fixed `TEMPLATE()` parser
- fixed `stream.pause()/stream.resume()` functionality in the `REQUEST()` method
- extended: `API()` by adding Total.js API services, e.g. `API('TAPI', 'sms', { ... }).promise()`
- extended `API()` by adding `.output(type)` method, a value is set to the `opt.output` object
- fixed `/bundles/*.url` files in debug mode
- improved `API()`, the API `name` can now be called in lowercase
- extended `FAKE()` by adding inline JSON schemas specification
- extended `SCHEDULE()` method by adding support of `cron` basics
- added `QueryBuilder.permit(name, type, value, [useridfield], [userid], [required])` method
- fixed routing inline flags in the form: `&flag1' `&flag2`
- fixed using of message data via `FlowStreamMessage.variables()`